# mero-calendar

./: CHANGELOG.md  Makefile  README.md
.github/workflows/: ci.yml  integration-ci.yml  release.yml  workflow-tests.yml
app/: .env  .gitignore  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
app/e2e/: calendar.spec.ts  landing.spec.ts  login.spec.ts  theme.spec.ts
app/e2e/integration/: README.md  rpc.spec.ts
app/src/: App.tsx  common.scss  index.module.scss  index.tsx
app/src/api/: appId.ts  clientApi.ts  rpc.ts
app/src/api/dataSource/: ClientApiDataSource.ts
app/src/components/calendar/: Calendar.tsx  calendar.scss
app/src/contexts/: ToastContext.tsx
app/src/hooks/: index.ts  useAuth.ts  useClickOutside.ts  useMembers.ts  useSse.ts
app/src/hooks/useForm/: index.ts
app/src/hooks/useValidator/: types.ts
app/src/pages/calendar/: index.tsx
app/src/pages/landing/: LandingPage.tsx  landing.module.scss
app/src/pages/login/: index.tsx  login.module.scss
app/src/pages/teams/: TeamsPage.tsx  teams.module.scss
app/src/providers/ThemeProvider/: index.tsx
app/src/store/events/: actions.ts  reducer.ts  types.ts
app/src/styles/: theme.css
app/src/types/: event.ts  workspace.ts
app/src/utils/: authTokens.ts  errorMessage.ts  invitation.ts  teamName.ts
logic/: Cargo.toml  build-bundle.sh  build.sh
logic/src/: lib.rs
scripts/: dev-node.sh  dev-node2.sh  setup.sh  workflows.sh
workflows/: e2e.yml  integration-setup.yml  logic-test.yml
(+53 files in other folders)
