[package]
name = "merocalendar"
description = "Mero Calendar — collaborative p2p calendar on Calimero"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# Calimero SDK pinned to 0.11.0-rc.10. rc.6+ is published only as a git tag on the
# core repo (crates.io stops at rc.5), and the workspace package version at the
# tag is "0.0.0" — so a plain `= "0.11.0-rc.10"` version requirement cannot match.
# Use the git tag form (same approach every other post-rc.5 app uses). All crates
# share one tag so they resolve to a single, compatible commit.
[dependencies]
base64 = "0.22.1"
bs58 = "0.5.1"
calimero-sdk = { git = "https://github.com/calimero-network/core", tag = "0.11.0-rc.10" }
calimero-storage = { git = "https://github.com/calimero-network/core", tag = "0.11.0-rc.10" }
calimero-storage-macros = { git = "https://github.com/calimero-network/core", tag = "0.11.0-rc.10" }
thiserror = "1.0.56"

[dev-dependencies]
# Enables register_crdt_merge + the native mock host so TestHost can drive
# CRDT state under `cargo test`.
calimero-storage = { git = "https://github.com/calimero-network/core", tag = "0.11.0-rc.10", features = ["testing"] }

[profile.app-release]
inherits = "release"
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
